alignment issue fix

--- a/src/components/NavList/NavList.css
+++ b/src/components/NavList/NavList.css
@@ -72,7 +72,7 @@ nav {
   font-weight: bold;
 }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 700px) {
   body {
     overflow-x: hidden;
   }
